--- a/src/macros.html.j2
+++ b/src/macros.html.j2
@@ -16,12 +16,12 @@
 {%- endmacro -%}
 
 {%- macro integrationValue(reply, questionUuid) -%}
-  {%- if reply and reply.value.type == "IntegrationValue" -%}
+  {%- if reply and reply.value.value.type == "IntegrationType" -%}
     {%- set question = km.entities.questions[questionUuid] -%}
     {%- set integration = km.entities.integrations[question.integrationUuid] -%}
-    {%- set integrationLink = integration.itemUrl|replace("${id}", reply.value.id) -%}
-    <a href="{{ integrationLink }}" target="_blank">{{ reply.value.value }}</a>
+    {%- set integrationLink = integration.itemUrl|replace("${id}", reply.value.value.id) -%}
+    <a href="{{ integrationLink }}" target="_blank">{{ reply.value.value.value }}</a>
   {%- elif reply %}
-    {{ reply.value.value }}
+    {{ reply.value.value.value }}
   {%- endif -%}
 {%- endmacro -%}
