--- a/src/questions/05-ethical-aspects.html.j2
+++ b/src/questions/05-ethical-aspects.html.j2
@@ -5,7 +5,7 @@
     {%- set producedDataPath = [uuids.preservingCUuid, uuids.producedDataQUuid]|reply_path -%}
     {%- set producedDataItems = repliesMap[producedDataPath]|reply_items -%}
     {%- if producedDataItems|length > 0 -%}
-      <p>For the data we produce, the ethical aspects are as followsS:
+      <p>For the data we produce, the ethical aspects are as follows:
       <ul>
       {%- for i in producedDataItems -%}
         {%- set pathPrefix = [producedDataPath, i]|reply_path -%}
