--- a/src/macros.html.j2
+++ b/src/macros.html.j2
@@ -9,9 +9,9 @@
 
 {%- macro integrationValue(reply, questionUuid) -%}
   {%- if reply and reply.value.value.type == "IntegrationType" -%}
-    {%- set question = km.entities.questions[questionUuid] -%}
-    {%- set integration = km.entities.integrations[question.integrationUuid] -%}
-    {%- set integrationLink = integration.itemUrl|replace("${id}", reply.value.value.id) -%}
+    {%- set question = dc.e.questions[questionUuid] -%}
+    {%- set integration = question.integration -%}
+    {%- set integrationLink = integration.item(reply.value.value.id) -%}
     <a href="{{ integrationLink }}" target="_blank">{{ reply.value.value.value }}</a>
   {%- elif reply %}
     {{ reply.value.value.value }}
