--- a/src/questions/06-other-issues.html.j2
+++ b/src/questions/06-other-issues.html.j2
@@ -1,6 +1,6 @@
 <div id="q-other-issues" class="question">
   <div class="answer">
-    {%- set projectUrl = ctx.config.clientUrl ~ "/projects/" ~ ctx.questionnaireUuid -%}
-    <p>We use the <a href="https://ds-wizard.org">Data Stewardship Wizard</a> with its <em>{{ ctx.package.name }}</em> (ID: <span class="package-id"><span class="organization-id">{{ ctx.package.organizationId }}</span>:<span class="km-id">{{ ctx.package.kmId }}</span>:<span class="version">{{ ctx.package.version }}</span></span>) knowledge model to make our DMP. More specifically, we use the <a href="{{ ctx.config.clientUrl }}">{{ ctx.config.clientUrl }}</a> DSW instance where the project has direct URL: <a href="{{ projectUrl }}">{{ projectUrl }}</a>.</p>
+    {%- set project_url = dc.config.client_url ~ "/projects/" ~ dc.qtn.uuid -%}
+    <p>We use the <a href="https://ds-wizard.org">Data Stewardship Wizard</a> with its <em>{{ dc.pkg.name }}</em> (ID: <span class="package-id"><span class="organization-id">{{ dc.pkg.organization_id }}</span>:<span class="km-id">{{ dc.pkg.km_id }}</span>:<span class="version">{{ dc.pkg.version }}</span></span>) knowledge model to make our DMP. More specifically, we use the <a href="{{ dc.config.client_url }}">{{ dc.config.client_url }}</a> DSW instance where the project has direct URL: <a href="{{ project_url }}">{{ project_url }}</a>.</p>
   </div>
 </div>
