Update to metamodel v7

--- a/src/frontpage.html.j2
+++ b/src/frontpage.html.j2
@@ -74,7 +74,7 @@
       {% endfor %}
 
       <dt>Generated on</dt>
-      <dd>{{ dc.doc.created_at|datetime_format("%d %b %Y") }} UTC</dd>
+      <dd>{{ dc.doc.created_at|datetime_format("%d %b %Y") }}</dd>
     </dl>
     <p class="dsw">
       Data Management Plan created in Data Stewardship Wizard &laquo;<a href="https://ds-wizard.org" target="_blank">ds-wizard.org</a>&raquo;
