--- a/src/questions/02-4-reusable.html.j2
+++ b/src/questions/02-4-reusable.html.j2
@@ -71,11 +71,11 @@
           {%- if legalPrivacyWhereAUuid == uuids.legalPrivacyNoAUuid -%}
             {%- do notOpenSentences.append("There are no restrictions on where the data need to be stored related to the privacy reasons.") -%}
           {%- elif legalPrivacyWhereAUuid == uuids.legalPrivacyEuAUuid -%}
-            {%- do notOpenSentences.append("Due to the privacy reasons, the data must stay in the EU.") -%}
+            {%- do notOpenSentences.append("Due to privacy reasons, the data must stay in the EU.") -%}
           {%- elif legalPrivacyWhereAUuid == uuids.legalPrivacyCountryAUuid -%}
-            {%- do notOpenSentences.append("Due to the privacy reasons, the data must stay in the same country.") -%}
+            {%- do notOpenSentences.append("Due to privacy reasons, the data must stay in the same country.") -%}
           {%- elif legalPrivacyWhereAUuid == uuids.legalPrivacyInstituteAUuid -%}
-            {%- do notOpenSentences.append("Due to the privacy reasons, the data must stay in the same institute.") -%}
+            {%- do notOpenSentences.append("Due to privacy reasons, the data must stay in the same institute.") -%}
           {%- endif -%}
           {%- set privacyCanUse = [] -%}
           {%- set privacyCannotUse = [] -%}
@@ -111,6 +111,16 @@
           {%- elif privacyCannotUse|length == 3 -%}
             {%- do notOpenSentences.append(privacyCannotUseStart ~ "neither " ~ privacyCanUse[0] ~ " nor " ~ privacyCanUse[1] ~ ", nor " ~ privacyCanUse[2] ~ " to make the data more openly available.") -%}
           {%- endif -%}
+
+          {%- if legalPrivacyPseudoAUuid == uuids.legalPrivacyPseudoYesAUuid -%}
+            {%- set legalPrivacyPseudoPartyPath = [legalPrivacyPseudoPath, legalPrivacyPseudoAUuid, uuids.legalPrivacyPseudoPartyQUuid]|reply_path -%}
+            {%- set legalPrivacyPseudoPartyAUuid = repliesMap[legalPrivacyPseudoPartyPath]|reply_str_value -%}
+            {%- if legalPrivacyPseudoPartyAUuid == uuids.legalPrivacyPseudoPartyNoAUuid -%}
+              {%- do notOpenSentences.append("For pseudonymization, we cannot make use of an existing 'trusted third party'.") -%}
+            {%- elif legalPrivacyPseudoPartyAUuid == uuids.legalPrivacyPseudoPartyYesAUuid -%}
+              {%- do notOpenSentences.append("For pseudonymization, we can make use of an existing 'trusted third party'.") -%}
+            {%- endif -%}
+          {%- endif -%}
         {%- endif -%}
         
         {%- set legalIpPath = [notOpenLegalReasonsPath, uuids.notOpenLegalReasonsYesAUuid, uuids.legalIpQUuid]|reply_path -%}
@@ -140,14 +150,14 @@
     {%- set coldStoragePath = [uuids.preservingCUuid, uuids.coldStorageQUuid]|reply_path -%}
     {%- set coldStorageAUuid = repliesMap[coldStoragePath]|reply_str_value -%}
     {%- if coldStorageAUuid == uuids.coldStorageNoAUuid -%}
-      <p>We do not plan to be archiving data (using so-called <em>cold storage</em>) for long term preservation already during your project.</p>
+      <p>We do not plan to be archiving data (using so-called <em>cold storage</em>) for long term preservation already during the project.</p>
     {%- elif coldStorageAUuid == uuids.coldStorageYesAUuid -%}
       {%- set coldStorageReusablePath = [coldStoragePath, uuids.coldStorageYesAUuid, uuids.coldStorageReusableQUuid]|reply_path -%}
       {%- set coldStorageReusableAUuid = repliesMap[coldStorageReusablePath]|reply_str_value -%}
       {%- if coldStorageReusableAUuid == uuids.coldStorageReusableNoAUuid -%}
-        <p>We will be archiving data (using so-called <em>cold storage</em>) for long term preservation already during your project.</p>
+        <p>We will be archiving data (using so-called <em>cold storage</em>) for long term preservation already during the project.</p>
       {%- elif coldStorageReusableAUuid == uuids.coldStorageReusableYesAUuid -%}
-        <p>We will be archiving data (using so-called <em>cold storage</em>) for long term preservation already during your project. The data are expected to be still understandable and reusable after a long time.</p>
+        <p>We will be archiving data (using so-called <em>cold storage</em>) for long term preservation already during the project. The data are expected to be still understandable and reusable after a long time.</p>
       {%- endif -%}
     {%- endif -%}
 
