--- a/src/questions/03-resource-allocation.html.j2
+++ b/src/questions/03-resource-allocation.html.j2
@@ -12,9 +12,9 @@
   {%- set coldStorageAfter = coldStorageAfterAUuid == uuids.coldStorageAfterYesAUuid -%}
 
   {%- if coldStorageDuring and coldStorageAfter -%}
-    <p>We will be archiving data (using so-called 'cold storage') for long term preservation after the project but also already during your project.</p>
+    <p>We will be archiving data (using so-called 'cold storage') for long term preservation after the project but also already during the project.</p>
   {%- elif coldStorageDuring -%}
-    <p>We will be archiving data (using so-called 'cold storage') for long term preservation already during your project.</p>
+    <p>We will be archiving data (using so-called 'cold storage') for long term preservation already during the project.</p>
   {%- elif coldStorageAfter -%}
     <p>We will be archiving data (using so-called 'cold storage') for long term preservation after the project.</p>
   {%- endif -%}
@@ -60,9 +60,9 @@
     {%- macro contributorsResponsibility(contributors, contributorRoleAUuid, responsibility) -%}
       {%- set names = [] -%}
       {%- for i in contributors -%}
-        {%- set role = repliesMap[[contributorsPath, i, uuids.contributorRoleQUuid]|reply_path]|reply_str_value -%}
+        {%- set roles = repliesMap[[contributorsPath, i, uuids.contributorRoleQUuid]|reply_path]|reply_items -%}
         {%- set name = repliesMap[[contributorsPath, i, uuids.contributorNameQUuid]|reply_path]|reply_str_value -%}
-        {%- if role == contributorRoleAUuid and name -%}
+        {%- if contributorRoleAUuid in roles and name -%}
           {%- do names.append(name) -%}
         {%- endif -%}
       {%- endfor -%}
@@ -88,7 +88,9 @@
     {# Data stewards #}
     {{ contributorsResponsibility(contributorsItems, uuids.contributorRoleDataStewardAUuid, "responsible for the management and proficiency of data including data processing, data policies, data guidelines, and data availability.") }}
     {# Distributors #}
-    {{ contributorsResponsibility(contributorsItems, uuids.contributorRoleDistributorAUuid, "responsible for generating/disseminating copies of the resouce in either electronic or print form.") }}
+    {{ contributorsResponsibility(contributorsItems, uuids.contributorRoleDistributorAUuid, "responsible for generating and disseminating copies of the resouce in either electronic or print form.") }}
+    {# Data protection officers #}
+    {{ contributorsResponsibility(contributorsItems, uuids.contributorRoleDataProtectorAUuid, "responsible for all issues relating to the protection of personal data and data protection policies in general.") }}
   {%- endif -%}
 
   {# additional expertise #}
