Fix Jinja template nesting error

--- a/src/questions/02-2-accessible.html.j2
+++ b/src/questions/02-2-accessible.html.j2
@@ -210,7 +210,7 @@
             {%- endfor -%}
           </ul>
         {%- endif -%}
-      {%- endfor -%}
+      {%- endif -%}
       {%- if (answeredRefData|length + answeredNRefData|length) > 0 -%}
         <p>For the reference and non-reference data sets that we reuse, conditions are as follows:
         <ul>
