[DSW-1917] Update to use WeasyPrint for PDF

--- a/src/frontpage.html.j2
+++ b/src/frontpage.html.j2
@@ -6,7 +6,7 @@
   <h3>
     Following the <strong>Horizon 2020 DMP Template v2.0</strong>
   </h3>
-  <div>
+  <div class="dmp-info">
     <dl>
       {%- set contributorsPath = [uuids.adminDetailsCUuid, uuids.contributorsQUuid]|join(".") -%}
       {%- set contributorsItems = repliesMap[contributorsPath]|reply_items -%}
@@ -37,11 +37,11 @@
                     <span class="contact-name missing">(name not given)</span>
                   {%- endif -%}
                   {%- if contributorEmail and contributorOrcid %}
-                    ({{ macros.formatEmail(contributorEmail) }}, {{ macros.formatOrcid(contributorOrcid) }})
+                    <br>{{ macros.formatEmail(contributorEmail) }}, {{ macros.formatOrcid(contributorOrcid) }}
                   {%- elif contributorEmail %}
-                    ({{ macros.formatEmail(contributorEmail) }})
+                    <br>{{ macros.formatEmail(contributorEmail) }}
                   {%- elif contributorOrcid %}
-                    ({{ macros.formatOrcid(contributorOrcid) }})
+                    <br>{{ macros.formatOrcid(contributorOrcid) }}
                   {%- endif -%}
                   {%- if contributorAffiliationReply %}
                     <br>{{ macros.integrationValue(contributorAffiliationReply, uuids.contributorAffiliationQUuid) }}
