--- a/src/questions/01-data-summary.html.j2
+++ b/src/questions/01-data-summary.html.j2
@@ -142,12 +142,9 @@
   {%- set preexistingPath = [uuids.reusingCUuid, uuids.preexistingQUuid]|reply_path -%}
   {%- set preexistingAUuid = repliesMap[preexistingPath]|reply_str_value -%}
   {%- if preexistingAUuid == uuids.preexistingYesAUuid -%}
-    {%- set usingPreexistingPath = [preexistingPath, uuids.preexistingYesAUuid, uuids.usingPreexistingQUuid]|reply_path -%}
-    {%- set usingPreexistingAUuid = repliesMap[usingPreexistingPath]|reply_str_value -%}
-    {%- if usingPreexistingAUuid == uuids.usingPreexistingYesAUuid -%}
-      {%- set refDataPath = [usingPreexistingPath, uuids.usingPreexistingYesAUuid, uuids.refDataQUuid]|reply_path -%}
+      {%- set refDataPath = [preexistingPath, uuids.preexistingYesAUuid, uuids.refDataQUuid]|reply_path -%}
       {%- set refDataItems = repliesMap[refDataPath]|reply_items -%}
-      {%- set nrefDataPath = [usingPreexistingPath, uuids.usingPreexistingYesAUuid, uuids.nrefDataQUuid]|reply_path -%}
+      {%- set nrefDataPath = [preexistingPath, uuids.preexistingYesAUuid, uuids.nrefDataQUuid]|reply_path -%}
       {%- set nrefDataItems = repliesMap[nrefDataPath]|reply_items -%}
       {%- if (refDataItems|length + nrefDataItems|length) > 0 -%}
         <div>
@@ -157,6 +154,7 @@
             <ul>
               {%- for refDataItem in refDataItems -%}
                 {%- set refDataPrefix = [refDataPath, refDataItem]|reply_path -%}
+                {%- set refDataUsedPrefix = [refDataPrefix, uuids.refDataUseQUuid, uuids.refDataUseYesAUuid]|reply_path -%}
                 {%- set refDataNameReply = repliesMap[[refDataPrefix, uuids.refDataNameQUuid]|reply_path] -%}
                 {%- set refDataWhere = repliesMap[[refDataPrefix, uuids.refDataWhereQUuid]|reply_path]|reply_str_value -%}
                 <li>
@@ -170,7 +168,7 @@
                     {%- endif -%}
                   {%- endif -%}
                   {# version #}
-                  {%- set refDataVersionedPath = [refDataPrefix, uuids.refDataVersionedQUuid]|reply_path -%}
+                  {%- set refDataVersionedPath = [refDataUsedPrefix, uuids.refDataVersionedQUuid]|reply_path -%}
                   {%- set refDataVersionedAUuid = repliesMap[refDataVersionedPath]|reply_str_value -%}
                   {%- if refDataVersionedAUuid == uuids.refDataVersionedYesAUuid -%}
                     {%- set refDataVersionedWhichPath = [refDataVersionedPath, uuids.refDataVersionedYesAUuid, uuids.refDataVersionedWhichQUuid]|reply_path -%}
