--- a/src/style.css
+++ b/src/style.css
@@ -104,7 +104,7 @@ header .contact-orcid {
   white-space: nowrap;
 }
 
-header .dsw {
+header .note {
   margin-top: 2cm;
   text-align: center;
   font-size: 10pt;
