--- a/src/questions/01-data-summary.html.j2
+++ b/src/questions/01-data-summary.html.j2
@@ -159,13 +159,15 @@
               {%- set refDataWhere = repliesMap[[refDataPrefix, uuids.refDataWhereQUuid]|reply_path]|reply_str_value -%}
               <li>
                 {# identification #}
-                <strong>{{ macros.integrationValue(refDataNameReply, uuids.refDataNameQUuid) }}</strong>
+                <div>{{ macros.integrationValue(refDataNameReply) }}</div>
                 {%- if refDataWhere -%}
+                  <p>
                   {%- if refDataWhere.startswith("http://") or refDataWhere.startswith("https://") or refDataWhere.startswith("ftp://") %}
-                    (<a href="{{ refDataWhere }}" target="_blank">{{ refDataWhere }}</a>)
+                    It is available via: <a href="{{ refDataWhere }}" target="_blank">{{ refDataWhere }}</a>.
                   {%- else %}
-                    ({{ refDataWhere }})
+                    It is available via: {{ refDataWhere }}.
                   {%- endif -%}
+                  </p>
                 {%- endif -%}
                 {# version #}
                 {%- set refDataVersionedPath = [refDataUsedPrefix, uuids.refDataVersionedQUuid]|reply_path -%}
@@ -204,13 +206,15 @@
               {%- set nrefDataWhere = repliesMap[[nrefDataPrefix, uuids.nrefDataWhereQUuid]|reply_path]|reply_str_value -%}
               <li>
                 {# identification #}
-                <strong>{{ macros.integrationValue(nrefDataNameReply, uuids.nrefDataNameQUuid) }}</strong>
+                <div>{{ macros.integrationValue(nrefDataNameReply) }}</div>
                 {%- if nrefDataWhere -%}
+                  <p>
                   {%- if nrefDataWhere.startswith("http://") or nrefDataWhere.startswith("https://") or nrefDataWhere.startswith("ftp://") %}
-                    (<a href="{{ nrefDataWhere }}" target="_blank">{{ nrefDataWhere }}</a>)
+                    It is available via: <a href="{{ nrefDataWhere }}" target="_blank">{{ nrefDataWhere }}</a>.
                   {%- else %}
-                    ({{ nrefDataWhere }})
+                    It is available via: {{ nrefDataWhere }}.
                   {%- endif -%}
+                  </p>
                 {%- endif -%}
                 {# version #}
                 {%- set refDataVersionedPath = [refDataUsedPrefix, uuids.refDataVersionedQUuid]|reply_path -%}
@@ -256,13 +260,15 @@
               {%- set nrefDataWhere = repliesMap[[nrefDataPrefix, uuids.nrefDataWhereQUuid]|reply_path]|reply_str_value -%}
               <li>
                 {# identification #}
-                <strong>{{ macros.integrationValue(nrefDataNameReply, uuids.nrefDataNameQUuid) }}</strong>
+                <div>{{ macros.integrationValue(nrefDataNameReply) }}</div>
                 {%- if nrefDataWhere -%}
+                  <p>
                   {%- if nrefDataWhere.startswith("http://") or nrefDataWhere.startswith("https://") or nrefDataWhere.startswith("ftp://") %}
-                    (<a href="{{ nrefDataWhere }}" target="_blank">{{ nrefDataWhere }}</a>)
+                    It is available via: <a href="{{ nrefDataWhere }}" target="_blank">{{ nrefDataWhere }}</a>.
                   {%- else %}
-                    ({{ nrefDataWhere }})
+                    It is available via: {{ nrefDataWhere }}.
                   {%- endif -%}
+                  </p>
                 {%- endif -%}
                 {# data access #}
                 {%- set nrefDataAccessPath = [nrefDataUsedPrefix, uuids.nrefDataAccessQUuid]|reply_path -%}
@@ -309,7 +315,7 @@
         {%- set formatsVolumeAUuid = repliesMap[formatsVolumePath]|reply_str_value -%}
         <li>
           {# identification #}
-          <strong>{{ macros.integrationValue(formatNameReply, uuids.formatsNameQUuid) }}</strong>
+          <div>{{ macros.integrationValue(formatNameReply) }}</div>
           {%- if formatsIsStandardAUuid or formatsIsLTSuitableAUuid or formatsVolumeAUuid -%}
             <p>
             {# standard? #}
