Fix version table

--- a/src/word/index.html.j2
+++ b/src/word/index.html.j2
@@ -8,7 +8,7 @@
 {% import "src/globals.j2" as globals with context %}
 <html lang="en">
   <head>
-    <title>Data Management Plan</title>
+    <title>{{ ctx.questionnaireName }}</title>
     <meta charset="utf-8">
     <style>
       {% include "src/style.css" %}
