--- a/src/index.html.j2
+++ b/src/index.html.j2
@@ -10,6 +10,9 @@
   <head>
     <title>Data Management Plan</title>
     <meta charset="utf-8">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
     <style>
       {% include "src/style.css" %}
     </style>
