Update to metamodel v14, release 1.16.0

--- a/src/index.html.j2
+++ b/src/index.html.j2
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 {%- set km = ctx.knowledgeModel -%}
-{%- set repliesMap = ctx.questionnaireReplies -%}
+{%- set repliesMap = ctx.questionnaire.replies -%}
 {%- set report = ctx.report -%}
 {%- set dc = ctx|to_context_obj -%}
 {% import "src/macros.html.j2" as macros with context %}
