--- a/src/frontpage.html.j2
+++ b/src/frontpage.html.j2
@@ -12,11 +12,15 @@
       {%- set contributorsItems = repliesMap[contributorsPath]|reply_items -%}
       {%- if contributorsItems|length > 0 -%}
         {%- set contacts = [] -%}
+        {%- set creators = [] -%}
         {%- for i in contributorsItems -%}
           {%- set pathPrefix = [contributorsPath, i]|join(".") ~ "." -%}
           {%- set contributorRoles = repliesMap[pathPrefix ~ uuids.contributorRoleQUuid]|reply_items -%}
           {%- if uuids.contributorRoleContactPersonAUuid in contributorRoles -%}
             {% do contacts.append(pathPrefix)  %}
+          {%- endif -%}
+          {%- if uuids.contributorRoleCreatorOfDMP in contributorRoles -%}
+            {% do creators.append(pathPrefix)  %}
           {%- endif -%}
         {%- endfor -%}
         {%- set nContacts = contacts|length -%}
@@ -63,10 +67,40 @@
       <dd>{{ dc.current_phase.title }}</dd>
       {%- endif -%}
 
-      {%- if dc.qtn.created_by -%}
+      {%- set nCreators = creators|length -%}
       <dt>Created by</dt>
-      <dd><span class="contact-name">{{ dc.qtn.created_by.first_name }} {{ dc.qtn.created_by.last_name }}</span> ({{ macros.formatEmail(dc.qtn.created_by.email) }}){% if dc.qtn.created_by.affiliation %}<br>{{ dc.qtn.created_by.affiliation }}{% endif %}</dd>
-      {%- endif -%}
+        <dd>
+          {%- if nCreators > 0 -%}
+            <ul>
+                {%- for pathPrefix in creators -%}
+                  <li>
+                    {%- set creatorName = repliesMap[pathPrefix ~ uuids.contributorNameQUuid]|reply_str_value -%}
+                    {%- set creatorEmail = repliesMap[pathPrefix ~ uuids.contributorEmailQUuid]|reply_str_value -%}
+                    {%- set creatorOrcid = repliesMap[pathPrefix ~ uuids.contributorOrcidQUuid]|reply_str_value -%}
+                    {%- set creatorAffiliationReply = repliesMap[pathPrefix ~ uuids.contributorAffiliationQUuid] -%}
+
+                    {%- if creatorName -%}
+                      <span class="contact-name">{{ creatorName }}</span>
+                    {%- else -%}
+                      <span class="contact-name missing">(name not given)</span>
+                    {%- endif -%}
+                    {%- if creatorEmail and creatorOrcid -%}
+                      <br>{{ macros.formatEmail(creatorEmail) }}, {{ macros.formatOrcid(creatorOrcid) }}
+                    {%- elif creatorEmail -%}
+                      <br>{{ macros.formatEmail(creatorEmail) }}
+                    {%- elif creatorOrcid -%}
+                      <br>{{ macros.formatOrcid(creatorOrcid) }}
+                    {%- endif -%}
+                    {%- if creatorAffiliationReply -%}
+                      <br>{{ macros.integrationValue(creatorAffiliationReply) }}
+                    {%- endif -%}
+                  </li>
+                {%- endfor -%}
+              </ul>
+            {%- else -%}
+              <span class="empty-value">There is no creator specified yet</span>
+          {%- endif -%}
+        </dd>
 
       {% for version in dc.qtn.versions if version.uuid == dc.qtn.version %}
       <dt>Version</dt>
