--- a/src/questions/03-resource-allocation.html.j2
+++ b/src/questions/03-resource-allocation.html.j2
@@ -158,9 +158,6 @@
   {%- endif -%}
 
   {# People #}
-  {%- if ctx.questionnaire.createdBy %}
-    <p>{{ctx.questionnaire.createdBy.firstName}} {{ctx.questionnaire.createdBy.lastName}} is responsible for implementing the DMP, and ensuring it is reviewed and revised.</p>
-  {%- endif -%}
 
   {%- set contributorsPath = [uuids.adminDetailsCUuid, uuids.contributorsQUuid]|reply_path -%}
   {%- set contributorsItems = repliesMap[contributorsPath]|reply_items -%}
@@ -199,6 +196,8 @@
     {{ contributorsResponsibility(contributorsItems, uuids.contributorRoleDistributorAUuid, "responsible for generating and disseminating copies of the resouce in either electronic or print form.") }}
     {# Data protection officers #}
     {{ contributorsResponsibility(contributorsItems, uuids.contributorRoleDataProtectorAUuid, "responsible for all issues relating to the protection of personal data and data protection policies in general.") }}
+    {# Creator of DMP #}
+    {{ contributorsResponsibility(contributorsItems, uuids.contributorRoleCreatorOfDMPAUuid, "responsible for implementing the DMP, and ensuring it is reviewed and revised.") }}
   {%- endif -%}
 
   {# additional expertise #}
