Improve ORCID plain integration, improve readme

--- a/src/macros.html.j2
+++ b/src/macros.html.j2
@@ -6,6 +6,8 @@
 {%- macro formatOrcid(reply) -%}
   {%- if reply.value.value.type == "IntegrationType" -%}
     <span class="contact-orcid">ORCID: <a href="https://orcid.org/{{ reply.value.value.id }}" target="_blank">{{ reply.value.value.id }}</a></span>
+  {%- else -%}
+    <span class="contact-orcid">ORCID: {{ reply.value.value.value }} </span>
   {%- endif -%}
 {%- endmacro -%}
 
