--- a/src/macros.html.j2
+++ b/src/macros.html.j2
@@ -3,8 +3,12 @@
   <span class="contact-email"><a href="mailto:{{ email }}">{{ email }}</a></span>
 {%- endmacro -%}
 
-{%- macro formatOrcid(orcid) -%}
-  <span class="contact-orcid">ORCID: <a href="https://orcid.org/{{ orcid }}" target="_blank">{{ orcid }}</a></span>
+{%- macro formatOrcid(reply) -%}
+  {%- if reply.value.value.type == "IntegrationType" -%}
+    <span class="contact-orcid">ORCID: <a href="https://orcid.org/{{ reply.value.value.id }}" target="_blank">{{ reply.value.value.id }}</a></span>
+  {%- else -%}
+    <span class="contact-orcid">ORCID: <a href="https://orcid.org/{{ reply.value.value.value }}" target="_blank">{{ reply.value.value.value }}</a></span>
+  {%- endif -%}
 {%- endmacro -%}
 
 {%- macro integrationValue(reply) -%}
